recommendation-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendation-service
  labels:
    app: recommendation-service
spec:
  type: ClusterIP
  ports:
    - port: 8083
      targetPort: 8083
      protocol: TCP
      name: http
  selector:
    app: recommendation-service
